--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jsencrypt": "3.3.2",
     "nprogress": "0.2.0",
     "pinia": "3.0.2",
+    "rrweb-player": "1.0.0-alpha.4",
     "sortablejs": "1.15.6",
     "splitpanes": "4.0.4",
     "vue": "3.5.16",
